More tweaking of ad-create pages

--- a/app/views/misc/create_1.html.erb
+++ b/app/views/misc/create_1.html.erb
@@ -1,16 +1,19 @@
 <div class="container">
 
     <div class="row">
-    
+
         <div class="seven columns">
             <h1>Legg ut annonse</h1>
             <p>
                 Legg ut en annonse og tjen penger. Det tar mindre enn ett minutt!
-                <!-- fixme: anchor href til sidebar når man er i mobilview? -->
+                <a class="u-hidden-when-grid" href="#ad-input-info">Les mer</a>
             </p>
 
+            <div class="input-progress"><div class="input-progress__step input-progress__step--current"><strong>Detaljer</strong></div><div class="input-progress__step"><strong>Bilder</strong></div><div class="input-progress__step"><strong>Publiser</strong></div>
+            </div>
+
             <div class="row">
-                <div class="two-thirds column">
+                <div class="nine columns">
                     <label>Overskrift:</label>
                     <input class="u-full-width">
                     
@@ -53,7 +56,6 @@
             </div>
 
             <div>
-
                 <div> map placeholder </div>
 
                 <label>Beskrivelse</label>
@@ -63,7 +65,6 @@
 
                 <a class="u-pull-right" href="#">Neste steg</a>
             </div>
-
 
         </div>
         <div class="four columns offset-by-one column">
