--- a/app/views/misc/create_2.html.erb
+++ b/app/views/misc/create_2.html.erb
@@ -2,6 +2,9 @@
     <div class="row">
         <div class="seven columns">
             input step 2
+
+            <div class="input-progress"><div class="input-progress__step input-progress__step--current"><strong>Detaljer</strong></div><div class="input-progress__step"><strong>Bilder</strong></div><div class="input-progress__step"><strong>Publiser</strong></div>
+            </div>
         </div>
         <div class="four columns offset-by-one column">
             <%= render partial: "ad_input_copy" %>
