--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Profile:</strong>
-  <%= @ad.profile_id %>
+  <strong>User:</strong>
+  <%= @ad.user_id %>
 </p>
 
 <p>
