--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -6,8 +6,8 @@
 </p>
 
 <p>
-  <strong>Requester profile:</strong>
-  <%= @booking.from_profile_id %> - <%= @booking.from_profile.name %>
+  <strong>Requester user:</strong>
+  <%= @booking.from_user_id %> - <%= @booking.from_user.name %>
 </p>
 
 <p>
