--- a/app/views/feedbacks/show.html.erb
+++ b/app/views/feedbacks/show.html.erb
@@ -6,8 +6,8 @@
 </p>
 
 <p>
-  <strong>From profile:</strong>
-  <%= @feedback.from_profile_id %>
+  <strong>From user:</strong>
+  <%= @feedback.from_user_id %>
 </p>
 
 <p>
