--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -16,12 +16,12 @@
     <%= f.number_field :booking_id %>
   </div>
   <div class="field">
-    <%= f.label :from_profile_id %><br>
-    <%= f.number_field :from_profile_id %>
+    <%= f.label :from_user_id %><br>
+    <%= f.number_field :from_user_id %>
   </div>
   <div class="field">
-    <%= f.label :to_profile_id %><br>
-    <%= f.number_field :to_profile_id %>
+    <%= f.label :to_user_id %><br>
+    <%= f.number_field :to_user_id %>
   </div>
   <div class="field">
     <%= f.label :content %><br>
