--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -12,10 +12,10 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :profile_id %><br>
-    <%#= f.number_field :profile_id %>
+    <%= f.label :user_id %><br>
+    <%#= f.number_field :user_id %>
     <%# NOTE: Non-scalable, test only: %>
-    <%= f.collection_select(:profile_id, Profile.all, :id, :name) %>
+    <%= f.collection_select(:user_id, User.all, :id, :name) %>
   </div>
   <div class="field">
     <%= f.label :title %><br>
