--- a/app/views/feedbacks/_form.html.erb
+++ b/app/views/feedbacks/_form.html.erb
@@ -17,9 +17,9 @@
     <%= f.collection_select(:ad_id, Ad.all, :id, :title) %>
   </div>
   <div class="field">
-    <%= f.label :from_profile_id %><br>
-    <%#= f.number_field :from_profile_id %>
-    <%= f.collection_select(:from_profile_id, Profile.all, :id, :name) %>
+    <%= f.label :from_user_id %><br>
+    <%#= f.number_field :from_user_id %>
+    <%= f.collection_select(:from_user_id, User.all, :id, :name) %>
   </div>
   <div class="field">
     <%= f.label :score %><br>
