--- a/app/views/feedbacks/index.html.erb
+++ b/app/views/feedbacks/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Ad</th>
-      <th>From profile</th>
+      <th>From user</th>
       <th>Score</th>
       <th>Body</th>
       <th colspan="3"></th>
@@ -17,7 +17,7 @@
     <% @feedbacks.each do |feedback| %>
       <tr>
         <td><%= feedback.ad_id %></td>
-        <td><%= feedback.from_profile_id %></td>
+        <td><%= feedback.from_user_id %></td>
         <td><%= feedback.score %></td>
         <td><%= feedback.body %></td>
         <td><%= link_to 'Show', feedback %></td>
