--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -6,13 +6,13 @@
 </p>
 
 <p>
-  <strong>From profile:</strong>
-  <%= @message.from_profile_id %>
+  <strong>From user:</strong>
+  <%= @message.from_user_id %>
 </p>
 
 <p>
-  <strong>To profile:</strong>
-  <%= @message.to_profile_id %>
+  <strong>To user:</strong>
+  <%= @message.to_user_id %>
 </p>
 
 <p>
