--- a/app/views/user_statuses/_form.html.erb
+++ b/app/views/user_statuses/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@profile_status) do |f| %>
-  <% if @profile_status.errors.any? %>
+<%= form_for(@user_status) do |f| %>
+  <% if @user_status.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@profile_status.errors.count, "error") %> prohibited this profile_status from being saved:</h2>
+      <h2><%= pluralize(@user_status.errors.count, "error") %> prohibited this user_status from being saved:</h2>
 
       <ul>
-      <% @profile_status.errors.full_messages.each do |message| %>
+      <% @user_status.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
