--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@profile) do |f| %>
-  <% if @profile.errors.any? %>
+<%= form_for(@user) do |f| %>
+  <% if @user.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@profile.errors.count, "error") %> prohibited this profile from being saved:</h2>
+      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
 
       <ul>
-      <% @profile.errors.full_messages.each do |message| %>
+      <% @user.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
@@ -52,8 +52,8 @@
     <%= f.number_field :ephemeral_answer_percent %>
   </div>
   <div class="field">
-    <%= f.label :profile_status_id %><br>
-    <%= f.collection_select(:profile_status_id, ProfileStatus.all, :id, :status) %>
+    <%= f.label :user_status_id %><br>
+    <%= f.collection_select(:user_status_id, UserStatus.all, :id, :status) %>
   </div>
   <div class="actions">
     <%= f.submit %>
