--- a/app/views/misc/create_1.html.erb
+++ b/app/views/misc/create_1.html.erb
@@ -15,16 +15,16 @@
             <div class="row">
                 <div class="nine columns">
                     <label>Overskrift:</label>
-                    <input class="u-full-width">
+                    <input type="text" class="u-full-width">
                     
                     <div class="row">
                         <div class="six columns">
                             <label>Pris pr dag:</label>
-                            <input class="u-full-width">
+                            <input type="text" class="u-full-width">
                         </div>
                         <div class="six columns">
                             <label>Utbetales til deg:</label>
-                            <input class="u-full-width">
+                            <input type="text" class="u-full-width">
                         </div>
                     </div>
                     
@@ -35,17 +35,17 @@
                         </small></span>
                     </label>
 
-                    <input class="u-full-width" placeholder="gateadresse">
+                    <input type="text" class="u-full-width" placeholder="gateadresse">
 
                     <div class="row">
                         <div class="four columns">
-                            <input class="u-full-width" placeholder="By">
+                            <input type="text" class="u-full-width" placeholder="By">
                         </div>
                         <div class="four columns">
-                            <input class="u-full-width" placeholder="Fylke">
+                            <input type="text" class="u-full-width" placeholder="Fylke">
                         </div>
                         <div class="four columns">
-                            <input class="u-full-width" placeholder="Postnummer">
+                            <input type="text" class="u-full-width" placeholder="Postnummer">
                         </div>
                     </div>
                     <p>
