- Adjusted button styles. Use the ones from skeleton for now - Fixed some specificity issues and made top bar look less bad

--- a/app/assets/stylesheets/skeleton.css
+++ b/app/assets/stylesheets/skeleton.css
@@ -206,7 +206,7 @@ input[type="submit"].button-primary,
 input[type="reset"].button-primary,
 input[type="button"].button-primary {
   color: #FFF;
-  background-color: #33C3F0;
+  background-color: #2a96ff;
   border-color: #33C3F0; }
 .button.button-primary:hover,
 button.button-primary:hover,
