--- a/app/assets/stylesheets/_constants.scss
+++ b/app/assets/stylesheets/_constants.scss
@@ -13,7 +13,39 @@ $color-approve: #36b984;
 $color-edit: #8f8989;
 $color-reject: #c20400;
 
+
+
+
 @mixin buttonish() {
+    display: inline-block;
+    height: 38px;
+    padding: 0 30px;
+    text-align: center;
+    font-size: 11px;
+    font-weight: 600;
+    line-height: 38px;
+    letter-spacing: .1rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    white-space: nowrap;
+    background-color: transparent;
+    border-radius: 4px;
+    border: 1px solid #bbb;
+    cursor: pointer;
+    box-sizing: border-box;
+    color: #FFF;
+    background-color: #2a96ff;
+    border-color: #33C3F0;
+
+    :hover {
+        color: #FFF;
+        background-color: #1EAEDB;
+        border-color: #1EAEDB;
+    }
+
+}
+
+@mixin buttonish_old() {
     color: red;
     border: solid thin $color-box-border;
     border-radius: 2px;
