--- a/app/assets/stylesheets/_top_bar.scss
+++ b/app/assets/stylesheets/_top_bar.scss
@@ -18,9 +18,14 @@ $top-bar-height: 52px;
         margin-left: 12px;
         border: solid thin $color-box-border;
     }
-
-    &__search-input {
+    
+    & &__search-input {
+        color: black;
         border: none;
+        height: 18px;
+        margin: 0;
+        vertical-align: middle;
+
     }
 
     &__search-icon {
@@ -42,7 +47,12 @@ $top-bar-height: 52px;
         padding-top: 6px;
         float: right;
     }
+
+    &__navbar-link {
+        color: white;
+    }
 }
+
 
 .top-anonymous-menu {
 
