--- a/app/views/misc/ad.html.erb
+++ b/app/views/misc/ad.html.erb
@@ -1,14 +1,16 @@
 <div class="container">
     <div class="row">
-        <div class="eight columns">
+        <div class="seven columns">
             <%= render partial: "ad_title_box", locals: { ad: @ad } %>
             <%= render partial: "ad_gallery_box", locals: { ad: @ad } %>
             <%= render partial: "ad_copy_section", locals: { ad: @ad } %>
             <%= render partial: "ad_feedback_list_section", locals: { ad: @ad } %>
         </div>
-        <div class="four columns">
+        <div class="five columns">
             <%= link_to 'Edit', edit_ad_path(@ad) %> |
             <%= link_to 'Back', ads_path %>
+            <%= render partial: "more_ads_sidebar", locals: { user: @ad.user } %>
+
         </div>
     </div>
 </div>
