--- a/app/views/misc/ad.html.erb
+++ b/app/views/misc/ad.html.erb
@@ -9,6 +9,7 @@
         <div class="five columns">
             <%= link_to 'Edit', edit_ad_path(@ad) %> |
             <%= link_to 'Back', ads_path %>
+            <%= render partial: "slim_map_location", locals: { ad: @ad } %>
             <%= render partial: "more_ads_sidebar", locals: { user: @ad.user } %>
 
         </div>
