Added 'small' flag to stars partial

--- a/app/views/misc/result.html.erb
+++ b/app/views/misc/result.html.erb
@@ -24,7 +24,7 @@
                 <div>
                     <%= image_tag "placeholder_avatar.png", alt: "username", class: "avatar--medium" %>
                     <br>
-                    <%= render('shared/stars.html', rating: ad.user.calculate_average_rating ) %>
+                    <%= render('shared/stars.html', rating: ad.user.calculate_average_rating, small: true ) %>
                 </div>
             </div>
 
