Moved the result item into separate partial

--- a/app/views/misc/result.html.erb
+++ b/app/views/misc/result.html.erb
@@ -1,65 +1,4 @@
 <div class="container" style="width: 380px;">
-
     <h3><%= @ads.count %> treff for "<%= @term %>"</h3>
-
-    <% @ads.each do |ad| %>
-        
-        <div class="search-result-item">
-            <a class="search-result-item__link" href="#">
-                <div class="search-result-item__image-holder">
-                    <%= image_tag "ads/ad1/ad_image_1.jpg", alt: "", class: "search-result-item__image" %>
-                </div>
-            </a>
-            <div class="search-result-item__text-container">
-                <h6 class="search-result-item__title"><%= ad.title %></h6>
-                <p class="search-result-item__body">
-                   <%= ad.short_description %>
-                    Short desc
-                    Short desc
-                    Short desc
-                </p>
-            </div>
-
-            <div class="search-result-item__profile">
-                <div>
-                    <%= image_tag "placeholder_avatar.png", alt: "username", class: "avatar--medium" %>
-                    <br>
-                    <%= render('shared/stars.html', rating: ad.user.calculate_average_rating, small: true ) %>
-                </div>
-            </div>
-
-
-            <div class="search-result-item__price-floater">kr <%= ad.price %> pr&nbsp;dag</div>
-
-
-        </div>
-
- <!--
-
-        <a href="./annonse2.html" class="searchresult">
-            <%= image_tag "ads/ad1/ad_image_1.jpg", alt: "", class: "" %>
-
-            <div class="textcontainer">
-                <div class="description">
-                    <h6><%= ad.title %></h6>
-                    <p><%= ad.body %></p>
-                </div>
-
-                <div class="profile">
-                    <div>
-                        <%= image_tag "placeholder_avatar.png", alt: "username", class: "avatar--medium" %>
-                        <%= render('shared/stars.html', rating: ad.user.calculate_average_rating ) %>
-                    </div>
-                </div>
-            </div>
-
-            <div class="pricefloater">kr 199<br>pr dag</div>
-
-        </a>
-
--->
-
-    <%end %>
-
+    <%= render partial: "search_result_item", collection: @ads, as: 'ad' %>
 </div>
-
