Updated facebook link image in footer

--- a/app/views/application/_main_footer.html.erb
+++ b/app/views/application/_main_footer.html.erb
@@ -22,7 +22,7 @@
             <div class="four columns">
                 <h6>Besøk oss på facebook</h6>
                 <ul class="about-footer__list">
-                    <li><%= image_tag "facebook_footer_like.png", alt: "", size: "49x20" %></li>
+                    <li><%= image_tag "facebook/FB-LikeButton-online-72.png", alt: "", size: "72x30" %></li>
                 </ul>
             </div>
         </div>
