--- a/app/views/ads/new1.html.erb
+++ b/app/views/ads/new1.html.erb
@@ -3,6 +3,8 @@
     <div class="row">
 
         <div class="seven columns">
+        <%= form_for(@ad) do |f| %>
+
             <h1>Legg ut annonse</h1>
             <p>
                 Legg ut en annonse og tjen penger. Det tar mindre enn ett minutt!
@@ -15,12 +17,12 @@
             <div class="row">
                 <div class="nine columns">
                     <label>Overskrift:</label>
-                    <input type="text" class="u-full-width">
+                    <%= f.text_field :title, class: 'u-full-width' %>
                     
                     <div class="row">
                         <div class="six columns">
                             <label>Pris pr dag:</label>
-                            <input type="text" class="u-full-width">
+                            <%= f.text_field :price, class: 'u-full-width' %>
                         </div>
                         <div class="six columns">
                             <label>Utbetales til deg:</label>
@@ -31,7 +33,7 @@
                     <label>
                         <input type="checkbox">
                         <span><small>
-                             ja jeg ønsker forsikring (pluss 5% av total leiesum)
+                            <%#= f.check_box :insurance %> ja jeg ønsker forsikring (pluss 5% av total leiesum)
                         </small></span>
                     </label>
 
@@ -58,15 +60,19 @@
             <div>
                 <div> map placeholder </div>
 
+                <label>Kort Beskrivelse</label>
+                <%= f.text_field :short_description, class: 'u-full-width' %>
                 <label>Beskrivelse</label>
-                <textarea class="u-full-width"></textarea>
+                <%= f.text_area :body, class: 'u-full-width'  %>
 
-                <div> tags placeholder </div>
+                <div> tags placeholder: <%= f.text_area :tags, class: 'u-full-width' %> </div>
 
-                <a class="u-pull-right" href="#">Neste steg</a>
+                <%= f.submit 'Neste steg', class: 'u-pull-right' %>
+                <!-- a class="u-pull-right" href="#">Neste steg</a -->
             </div>
-
+        <%- end -%>
         </div>
+
         <div class="four columns offset-by-one column">
             <%= render partial: "ad_input_copy" %>
         </div>
