--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -1,6 +1,5 @@
 
 
-
 <section class="front-search-block">        
     <h1 class="front-search-block__title">LEI DET DU TRENGER</h1>
 
@@ -13,7 +12,7 @@
         <% end %>
     </div>
     <div>
-        <%= link_to 'Lei ut tingene dine her', '/create_listing', {:class => 'front-search-block__new-ad-button button-primary'} %>
+        <%= link_to 'Lei ut tingene dine her', new1_ad_path, {:class => 'front-search-block__new-ad-button button-primary'} %>
     </div>
 
 </section>
