--- a/app/views/ads/_search_result_item.html.erb
+++ b/app/views/ads/_search_result_item.html.erb
@@ -1,22 +1,21 @@
 <div class="search-result-item">
-    <a class="search-result-item__link" href="#">
+    <%= link_to ad, class: "search-result-item__link" do %>
         <div class="search-result-item__image-holder">
             <%= image_tag "ads/ad1/ad_image_1.jpg", alt: "", class: "search-result-item__image" %>
         </div>
-    </a>
-    <div class="search-result-item__text-container">
-        <h6 class="search-result-item__title"><%= ad.title %></h6>
-        <p class="search-result-item__body">
-           <%= ad.short_description %>
-            Short desc
-            Short desc
-            Short desc
-        </p>
-    </div>
+    <% end %>
+    <%= link_to ad, class: "search-result-item__link" do %>
+        <div class="search-result-item__text-container">
+            <h6 class="search-result-item__title"><%= ad.title %></h6>
+            <p class="search-result-item__body">
+               <%= ad.short_description %>
+            </p>
+        </div>
+    <% end %>
 
     <div class="search-result-item__profile">
         <div>
-            <%= image_tag "placeholder_avatar.png", alt: "username", class: "avatar--medium" %>
+            <%= image_tag ad.user.avatar_url_safetest, alt: "username", class: "avatar--medium" %>
             <br>
             <%= render('shared/stars.html', rating: ad.user.calculate_average_rating, small: true ) %>
         </div>
