--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -1,34 +1,16 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>User:</strong>
-  <%= @ad.user_id %>
-</p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @ad.title %>
-</p>
-
-<p>
-  <strong>Short description:</strong>
-  <%= @ad.short_description %>
-</p>
-
-<p>
-  <strong>Body:</strong>
-  <%= @ad.body %>
-</p>
-
-<p>
-  <strong>Price:</strong>
-  <%= @ad.price %>
-</p>
-
-<p>
-  <strong>Tags:</strong>
-  <%= @ad.tags %>
-</p>
-
-<%= link_to 'Edit', edit_ad_path(@ad) %> |
-<%= link_to 'Back', ads_path %>
+<div class="container">
+    <div class="row">
+        <div class="seven columns">
+            <%= render partial: "ad_title_box", locals: { ad: @ad } %>
+            <%= render partial: "ad_gallery_box", locals: { ad: @ad } %>
+            <%= render partial: "ad_copy_section", locals: { ad: @ad } %>
+            <%= render partial: "ad_feedback_list_section", locals: { ad: @ad } %>
+        </div>
+        <div class="five columns">
+            <%= link_to 'Edit', edit_ad_path(@ad) %> |
+            <%= link_to 'Back', ads_path %>
+            <%= render partial: "slim_map_location", locals: { ad: @ad } %>
+            <%= render partial: "more_ads_sidebar", locals: { user: @ad.user } %>
+        </div>
+    </div>
+</div>
