--- a/app/views/ads/_search_result_item.html.erb
+++ b/app/views/ads/_search_result_item.html.erb
@@ -15,7 +15,7 @@
 
     <div class="search-result-item__profile">
         <div>
-            <%= image_tag ad.user.avatar_url_safetest, alt: "username", class: "avatar--medium" %>
+            <%= render('shared/avatar.html', user: ad.user, size: "medium" ) %>
             <br>
             <%= render('shared/stars.html', rating: ad.user.calculate_average_rating, small: true ) %>
         </div>
