- Added avatar to top bar when logged in - Fixed some top-bar styling - Fixed code to supress search field in top bar

--- a/app/assets/stylesheets/_top_bar.scss
+++ b/app/assets/stylesheets/_top_bar.scss
@@ -44,12 +44,17 @@ $top-bar-height: 52px;
 
     &__rightbox {
         display: block;
-        padding-top: 6px;
         float: right;
+        height: 38px;
+        line-height: 38px;
     }
 
     &__navbar-link {
         color: white;
+    }
+
+    &__avatar {
+        vertical-align: middle;
     }
 }
 
