--- a/app/views/application/_top_bar.html.erb
+++ b/app/views/application/_top_bar.html.erb
@@ -5,23 +5,30 @@
         <%= image_tag "plendit_logo.svg", alt: "Plendit homepage", class: "#{partial_name}__logo", size: "115x33" %>
     </a>
 
-    <% if @show_search_field %>
+    <% if !@hide_search_field %>
         <span class="<%= partial_name %>__search-holder">
             <%= image_tag "search_icon_small.png", alt: "", class: "#{partial_name}__search-icon", size: "18x18" %>
             <%= form_tag("/search", method: "get", class: "#{partial_name}__form") do %>
-              <%= text_field_tag 'q','', type: "text",  class: "#{partial_name}__search-input", placeholder: 'Hva vil du leie?'  %>
+                <%= text_field_tag 'q','', type: "text",  class: "#{partial_name}__search-input", placeholder: 'Hva vil du leie?'  %>
             <% end %>
         </span>
     <% end %>
 
     <span class="<%= partial_name %>__rightbox">
         <% if user_signed_in? %>
-          Logged in as <strong><%= current_user.email %></strong>.
-          <%= link_to 'Edit profile', edit_user_registration_path, :class => "#{partial_name}__navbar-link" %> |
-          <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => "#{partial_name}__navbar-link"  %>
+
+            <%= render('shared/avatar.html', user: current_user, size: "tiny", css_class: "top-bar__avatar") %>
+
+            <strong><%= current_user.name %></strong>.
+
+            <%= link_to 'Edit profile', edit_user_registration_path, :class => "#{partial_name}__navbar-link" %> |
+            <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => "#{partial_name}__navbar-link"  %>
+
         <% else %>
+
           <%= link_to "Sign up", new_user_registration_path, :class => "#{partial_name}__navbar-link"  %> |
           <%= link_to "Login", new_user_session_path, :class => "#{partial_name}__navbar-link"  %>
+
         <% end %>
     </span>
 
