--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 </head>
 <body>
 <header>
-    <%= render partial: "top_bar", locals: { show_search_field: @show_search_field, has_user: @has_user } %>
+    <%= render partial: "top_bar", locals: { hide_search_field: @hide_search_field } %>
 </header>
 
 <% if notice %>
