- Added controllerator js lib - Include goog maps js - Hook up map on sidebar box on ad pages

--- a/app/views/ads/_slim_map_location.html.erb
+++ b/app/views/ads/_slim_map_location.html.erb
@@ -1,5 +1,5 @@
 <section class="slim-map-location">
-    <div data-location="59.93761,10.81748">
-        Map placeholder
+    <div class="slim-map-location__map" data-geolocation="59.93761,10.81748" data-controller="sideBarMap">
+
     <div>
 </section>
