--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -7,8 +7,7 @@
             <%= render partial: "ad_feedback_list_section", locals: { ad: @ad } %>
         </div>
         <div class="five columns">
-            <%= link_to 'Edit', edit_ad_path(@ad) %> |
-            <%= link_to 'Back', ads_path %>
+            <%= render partial: "booking_request_form", locals: { ad: @ad } %>
             <%= render partial: "slim_map_location", locals: { ad: @ad } %>
             <%= render partial: "more_ads_sidebar", locals: { user: @ad.user } %>
         </div>
