--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -22,6 +22,10 @@
     <%= f.text_field :phone_number %>
   </div>
 
+  <%# if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+    <!-- <div>Currently waiting confirmation for: <%#= resource.unconfirmed_phone_number %></div> -->
+  <%# end %>
+
   <div class="field">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
     <%= f.password_field :password, autocomplete: "off" %>
