--- a/app/assets/stylesheets/frontpage.scss
+++ b/app/assets/stylesheets/frontpage.scss
@@ -4,7 +4,7 @@
 .front-search-block {
     padding-top: 170px;
     height: 500px;
-    background-image: url('garage.jpg');
+    background-image: image-url('garage.jpg');
     background-repeat: no-repeat;
     background-position: center;
     color: white;
