--- a/app/views/ads/new1.html.erb
+++ b/app/views/ads/new1.html.erb
@@ -22,11 +22,11 @@
                     <div class="row">
                         <div class="six columns">
                             <label>Pris pr dag:</label>
-                            <%= f.text_field :price, class: 'u-full-width' %>
+                            <%= f.text_field :price, class: 'u-full-width', data: {:controller => "syncPayout"} %>
                         </div>
                         <div class="six columns">
                             <label>Utbetales til deg:</label>
-                            <input type="text" class="u-full-width">
+                            <input type="text" class="u-full-width" data-payout>
                         </div>
                     </div>
                     
