--- a/app/views/users/_personal_bar.html.erb
+++ b/app/views/users/_personal_bar.html.erb
@@ -5,7 +5,7 @@
                 <a class="personal-bar__link personal-bar__link--active" href="#">Kontrollpanel</a>
                 <a class="personal-bar__link" href="#">Leiehistorikk</a>
                 <a class="personal-bar__link" href="#">Dine annonser</a>
-                <a class="personal-bar__link" href="#">Din profil</a>
+                <%= link_to 'Din profil', edit_user_registration_path, :class => "personal-bar__link" %>
                 <a class="personal-bar__link" href="#">Din konto</a>
                 <a class="personal-bar__link" href="#">Forespørsler</a>
             </div>
