- Started styling user page - Moved around feedback partial, as it's shared - Added recent_feedback method to user model

--- a/app/views/ads/_ad_feedback_list_section.html.erb
+++ b/app/views/ads/_ad_feedback_list_section.html.erb
@@ -1,4 +1,4 @@
 <section class="ad-feedback-section" id="feedback">
     <h5>Tilbakemeldinger</h5>
-    <%= render partial: "feedback_item_box", collection: ad.received_feedbacks, as: 'feedback' %>
+    <%= render partial: "shared/feedback_item_box", collection: ad.received_feedbacks, as: 'feedback' %>
 </section>
