Style tweaks to slim promoted ad

--- a/app/assets/stylesheets/_slim_promoted_ad.scss
+++ b/app/assets/stylesheets/_slim_promoted_ad.scss
@@ -10,7 +10,7 @@
     overflow: hidden;
     padding: $standard-spacing;
     background-color: white;
-    margin-left: $standard-spacing;
+    margin-right: $standard-spacing;
 
     &__image {
         width: 100%;
