--- a/app/views/shared/_slim_promoted_ad.html.erb
+++ b/app/views/shared/_slim_promoted_ad.html.erb
@@ -11,4 +11,9 @@
         <%= image_tag "add_favorite_small.png", alt: "username", class: "slim-promoted-ad__fav-button-image" %>
          Legg til i favoritter
     </button>
+
+    <div class="slim-promoted-ad__price-floater">
+        <%= ad.price %>,-
+        <small>per&nbsp;dag</small>
+    </div>
 </div>
